@@ -1,4 +1,5 @@
 0.14
+ - Move check_array* to Mo::utils::Array.
 
 0.13 2025-03-31T22:28:23+02:00
  - API change: Add 'covers' parameter.
